changes in discover page

--- a/Lite/home.html
+++ b/Lite/home.html
@@ -15,11 +15,12 @@
     <h1 id="brand">HumIT</h1>
     <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="discover.html">Discover</a></li>
+        <li><a href="porter.html">Porter</a></li>
         <li><a href="trending.html">Trending</a></li>
         <li><a href="login.html">Login</a></li>
     </ul>
 </nav>
+    <!-- <div class="cir"></div>
     <div class="cir"></div>
     <div class="cir"></div>
     <div class="cir"></div>
@@ -34,8 +35,7 @@
     <div class="cir"></div>
     <div class="cir"></div>
     <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
+    <div class="cir"></div> -->
 <div class="micin">
     <div class="circl">
         <img src="images/mic-outline.svg">
