--- a/Lite/porter.html
+++ b/Lite/porter.html
@@ -14,15 +14,13 @@
     <h1 id="brand">HumIT</h1>
     <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="discover.html">Discover</a></li>
+        <li><a href="porter.html">Porter</a></li>
         <li><a href="trending.html">Trending</a></li>
         <li><a href="login.html">Login</a></li>
     </ul>
 </nav>
 <div id="musiceffect"></div>
-<script src="//cdn.jsdelivr.net/npm/globe.gl"></script>
 <script src="js/musiceffect.js"></script>
 <script src="js/main.js"></script>
-<script src="js/globe.js"></script>
 </body>
 </html>
