--- a/Lite/login.html
+++ b/Lite/login.html
@@ -15,7 +15,7 @@
     <h1 id="brand">HumIT</h1>
     <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="discover.html">Discover</a></li>
+        <li><a href="porter.html">Porter</a></li>
         <li><a href="trending.html">Trending</a></li>
         <li><a href="login.html">Login</a></li>
     </ul>
