--- a/Lite/trending.html
+++ b/Lite/trending.html
@@ -11,14 +11,19 @@
 </head>
 <body>
 <nav>
-    <h1 id="brand">HumIT</h1>
-    <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="porter.html">Porter</a></li>
-        <li><a href="trending.html">Trending</a></li>
-        <li><a href="login.html">Login</a></li>
-    </ul>
+  <h1 id="brand">HumIT</h1>
+  <div class="navsearch">
+    <input id="navSearchInput" type="text" placeholder="Search songs..." autocomplete="off">
+    <button id="navSearchBtn" type="button">Search</button>
+  </div>
+  <ul>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="porter.html">Porter</a></li>
+    <li><a href="trending.html">Trending</a></li>
+    <li><a href="login.html">Login</a></li>
+  </ul>
 </nav>
+<div id="searchResults"></div>
 <div class="gridbase" id="grid"></div>
 <div id="musiceffect"></div>
 <script src="js/musiceffect.js"></script>
