Major design changes and code improvement

--- a/Lite/home.html
+++ b/Lite/home.html
@@ -1,49 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
-    <title>HumIt</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet" />
+  <title>HumIt</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<nav>
+  <nav>
     <h1 id="brand">HumIT</h1>
     <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="porter.html">Porter</a></li>
-        <li><a href="trending.html">Trending</a></li>
-        <li><a href="login.html">Login</a></li>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="porter.html">Porter</a></li>
+      <li><a href="trending.html">Trending</a></li>
+      <li><a href="login.html">Login</a></li>
     </ul>
-</nav>
-    <!-- <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div>
-    <div class="cir"></div> -->
-<div class="micin">
-    <div class="circl">
-        <img src="images/mic-outline.svg">
+  </nav>
+  <div class="wrapper">
+    <div class="mic">
+      <img src="images/mic-outline.svg" />
     </div>
-</div>
-<div id="musiceffect"></div>
-<script src="js/musiceffect.js"></script>
-<script src="js/main.js"></script>
-<script src="js/listen.js"></script>
+  </div>
+  <div id="musiceffect"></div>
+  <script src="js/musiceffect.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/listen.js"></script>
 </body>
-</html> 
+</html>
