--- a/Lite/login.html
+++ b/Lite/login.html
@@ -1,35 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
-    <title>HumIt</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet" />
+  <title>HumIt</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<nav>
+  <nav>
     <h1 id="brand">HumIT</h1>
     <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="porter.html">Porter</a></li>
-        <li><a href="trending.html">Trending</a></li>
-        <li><a href="login.html">Login</a></li>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="porter.html">Porter</a></li>
+      <li><a href="trending.html">Trending</a></li>
+      <li><a href="login.html">Login</a></li>
     </ul>
-</nav>
-    <div class="logincard">
-        <h2 style="margin-top:30px;align-self:self-start;margin-left:40px;margin-bottom: 5px;">Sign In</h2>
-        <input id="email" type="email" placeholder="Email">
-        <input id="password" type="password" placeholder="Password">
-        <img class="toggle" id="toggle" src="images/show.png">
-        <button id="login">LOGIN</button>
+  </nav>
+  <div class="logincard">
+    <h2>Sign In</h2>
+    <input id="email" type="email" placeholder="Email" />
+    <div class="wrapper1">
+      <input id="password" type="password" placeholder="Password" />
+      <img class="toggle" id="toggle" src="images/show.png" />
     </div>
-<div id="musiceffect"></div>
-<script src="js/musiceffect.js"></script>
-<script src="js/main.js"></script>
-<script src="js/auth.js"></script>
+    <button id="login">LOGIN</button>
+  </div>
+  <div id="musiceffect"></div>
+  <script src="js/musiceffect.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/auth.js"></script>
 </body>
 </html>
