--- a/Lite/trending.html
+++ b/Lite/trending.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
-    <title>HumIt</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet" />
+  <title>HumIt</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<nav>
-  <h1 id="brand">HumIT</h1>
-  <div class="navsearch">
-    <input id="navSearchInput" type="text" placeholder="Search songs..." autocomplete="off">
-    <button id="navSearchBtn" type="button">Search</button>
-  </div>
-  <ul>
-    <li><a href="home.html">Home</a></li>
-    <li><a href="porter.html">Porter</a></li>
-    <li><a href="trending.html">Trending</a></li>
-    <li><a href="login.html">Login</a></li>
-  </ul>
-</nav>
-<div id="searchResults"></div>
-<div class="gridbase" id="grid"></div>
-<div id="musiceffect"></div>
-<script src="js/musiceffect.js"></script>
-<script src="js/main.js"></script>
-<script src="js/trend.js"></script>
+  <nav>
+    <h1 id="brand">HumIT</h1>
+    <div class="navsearch">
+      <input id="navsearchinput" type="text" placeholder="Search songs..." autocomplete="off" />
+      <button id="navsearchbtn" type="button">Search</button>
+    </div>
+    <ul>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="porter.html">Porter</a></li>
+      <li><a href="trending.html">Trending</a></li>
+      <li><a href="login.html">Login</a></li>
+    </ul>
+  </nav>
+  <div id="searchresults"></div>
+  <div class="gridbase" id="grid"></div>
+  <div id="musiceffect"></div>
+  <script src="js/musiceffect.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/trend.js"></script>
 </body>
 </html>
