implemented light mode and dark mode toggle

--- a/Lite/home.html
+++ b/Lite/home.html
@@ -13,6 +13,7 @@
   <nav>
     <h1 id="brand">HumIT</h1>
     <ul>
+      <li><img class="modetoggle" id="modetoggle" src="images/brightness.png"></li>
       <li><a href="home.html">Home</a></li>
       <li><a href="porter.html">Porter</a></li>
       <li><a href="trending.html">Trending</a></li>
