--- a/Lite/trending.html
+++ b/Lite/trending.html
@@ -17,6 +17,7 @@
       <button id="navsearchbtn" type="button">Search</button>
     </div>
     <ul>
+      <li><img class="modetoggle" id="modetoggle" src="images/brightness.png"></li>
       <li><a href="home.html">Home</a></li>
       <li><a href="porter.html">Porter</a></li>
       <li><a href="trending.html">Trending</a></li>
