addition of profile page

--- a/Lite/porter.html
+++ b/Lite/porter.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav>
-    <h1 id="brand">HumIT</h1>
+    <h1 id="brand">HumiT</h1>
     <ul>
         <li><img class="modetoggle" id="modetoggle" src="images/brightness.png"></li>
         <li><a href="home.html">Home</a></li>
