--- a/Lite/trending.html
+++ b/Lite/trending.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav>
-    <h1 id="brand">HumIT</h1>
+    <h1 id="brand">HumiT</h1>
     <div class="navsearch">
       <input id="navsearchinput" type="text" placeholder="Search songs..." autocomplete="off" />
       <button id="navsearchbtn" type="button">Search</button>
