added local storage and implemented profile

--- a/Lite/profile.html
+++ b/Lite/profile.html
@@ -25,7 +25,7 @@
       <div class="profile">
         <h1>Welcome</h1>
         <h1>Back</h1>
-        <h2>Krishna</h2>
+        <h2>Username</h2>
         <div id="aboutwrap">
             <a>About me</a>
             <button><i class="fa fa-pencil"></i></button>
@@ -35,14 +35,18 @@
       <div class="library">
         <h1>Library</h1>
         <h2>Playlists</h2>
-        <div class="playlists"></div>
+        <div class="playlists">
+          <div id="playlistCards" class="gridbase"></div>
+        </div>
         <h2>Songs</h2>
-        <div class="songs"></div>
+        <div class="songs">
+          <div id="likedCards" class="gridbase"></div>
+        </div>
     </div>
   </div>
   <div id="musiceffect"></div>
   <script src="js/musiceffect.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/auth.js"></script>
+  <script src="js/profile.js"></script>
 </body>
 </html>
