added signup page

--- a/Lite/trending.html
+++ b/Lite/trending.html
@@ -14,7 +14,7 @@
     <h1 id="brand">HumiT</h1>
     <div class="navsearch">
       <input id="navsearchinput" type="text" placeholder="Search songs..." autocomplete="off" />
-      <button id="navsearchbtn" type="button">Search</button>
+      <button id="navsearchbtn" type="button"><img src="images/search.png"></button>
     </div>
     <ul>
       <li><img class="modetoggle" id="modetoggle" src="images/brightness.png"></li>
