--- a/Lite/home.html
+++ b/Lite/home.html
@@ -20,12 +20,20 @@
       <li><a href="login.html">Login</a></li>
     </ul>
   </nav>
-  <div class="wrapper">
+  <!-- <div class="wrapper">
     <div class="mic">
       <img src="images/mic-outline.svg" />
     </div>
+  </div> -->
+  <div class="wrapper">
+  <div class="mic">
+    <img id="micBtn" src="images/mic-outline1.svg" alt="Record">
   </div>
+  <p id="recStatus">Tap to listen</p>
+  </div>
+
   <div id="musiceffect"></div>
+  <script src="js/listen.js"></script>
   <script src="js/musiceffect.js"></script>
   <script src="js/main.js"></script>
   <script src="js/listen.js"></script>
