--- a/Lite/login.html
+++ b/Lite/login.html
@@ -21,13 +21,16 @@
     </ul>
   </nav>
   <div class="logincard">
-    <h2>Sign In</h2>
+    <div id="wrapper2">  
+      <h2>Sign In</h2>
+      <a id="sign" href="signup.html">Register</a>
+    </div>
     <input id="email" type="email" placeholder="Email" />
     <div class="wrapper1">
       <input id="password" type="password" placeholder="Password" />
       <img class="toggle" id="toggle" src="images/show.png" />
     </div>
-    <button id="login">LOGIN</button>
+    <button id="login">Login</button>
   </div>
   <div id="musiceffect"></div>
   <script src="js/musiceffect.js"></script>
