--- a/Lite/profile.html
+++ b/Lite/profile.html
@@ -25,7 +25,7 @@
       <div class="profile">
         <h1>Welcome</h1>
         <h1>Back</h1>
-        <h2>Username</h2>
+        <h2>Krishna Myaka</h2>
         <div id="aboutwrap">
             <a>About me</a>
             <button><i class="fa fa-pencil"></i></button>
